fix(AttachmentsPageAttachment): contrast of overlay buttons

--- a/data/style-dark.css
+++ b/data/style-dark.css
@@ -33,3 +33,11 @@
 .ttl-status-action-bookmark:active {
 	color: @red_2;
 }
+
+.ttl-status-badge.attachmentpageattachment>*.error {
+	background-color: alpha(mix(@red_4, black, .8), .8);
+}
+
+.ttl-status-badge.attachmentpageattachment>*.success {
+	background-color: alpha(mix(@green_4, black, .8), .8);
+}
